tests/integration/galley/validation/testdata/authentication-v1alpha1-Policy-invalid.yaml
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: invalid-authentication-policy
spec:
  targets:
  - name: "bad.target"
