tests/integration/galley/validation/testdata/config-v1alpha2-kubernetesenv-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: kubernetesenv
metadata:
  name: valid-kubernetesenv
spec:
  badField: foo
