tests/integration/galley/validation/testdata/config-v1alpha2-logentry-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: logentry
metadata:
  name: valid-logentry
spec:
  severity: '"Default"'
  timestamp: request.time
  variables:
    sourceIp: source.ip | ip("0.0.0.0")
    destinationIp: destination.ip | ip("0.0.0.0")
  monitored_resource_type: '"UNSPECIFIED"'
