tests/integration/galley/validation/testdata/config-v1alpha2-noop-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: noop
metadata:
  name: invalid-noop
spec:
  badField: foo
