tests/integration/galley/validation/testdata/config-v1alpha2-quota-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: quota
metadata:
  name: invalid-quota
spec:
  badField: foo
