tests/integration/galley/validation/testdata/config-v1alpha2-rbac-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: rbac
metadata:
 name: invalid-rbac
spec:
 badField: foo
