tests/integration/galley/validation/testdata/config-v1alpha2-rbac-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: rbac
metadata:
 name: valid-rbac
spec:
 config_store_url: "k8s://"
