tests/integration/galley/validation/testdata/config-v1alpha2-solarwinds-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: solarwinds
metadata:
  name: invalid-solarwinds
spec:
  badField: foo
