tests/integration/galley/validation/testdata/config-v1alpha2-stackdriver-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: stackdriver
metadata:
  name: valid-stackdriver
spec:
  badField: foo
