tests/integration/galley/validation/testdata/config-v1alpha2-tracespan-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: tracespan
metadata:
  name: valid-tracespan
spec:
  badField: foo
