tests/integration/galley/validation/testdata/rbac-v1alpha1-ServiceRoleBinding-invalid.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: test-binding-products
spec:
  subjects:
